Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	new file:   css/fonts/Asap-Bold.ttf
	new file:   css/fonts/Asap-BoldItalic.ttf
	new file:   css/fonts/Asap-Italic.ttf
	new file:   css/fonts/Asap-Medium.ttf
	new file:   css/fonts/Asap-MediumItalic.ttf
	new file:   css/fonts/Asap-Regular.ttf
	new file:   css/fonts/Asap-SemiBold.ttf
	new file:   css/fonts/Asap-SemiBoldItalic.ttf
	new file:   css/fonts/OFL.txt
	modified:   css/style.css
	modified:   index.html
	modified:   js/timeLine.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<main>
-		<section id="template-first">
+		<section id="template-1">
 			<h1> Címe a blokknak </h1>
 			<p> 
 				The White Stripes amerikai alternatív rock együttes volt.
@@ -78,8 +78,73 @@
 				<br class="clear" />
 			</aside>
 		</section>
-		<section id="template-sec">
+		<section id="template-2">
 			<h1> Címe a blokknak MÁSODIK </h1>
+			<p> 
+				The White Stripes amerikai alternatív rock együttes volt.
+				A detroiti zenekar két tagból állt, Jack White (ének, gitár és egyéb hangszerek), 
+				Meg White (dob, és egyéb ütős hangszerek).
+				Az ő nevükhöz fűződik a világ legrövidebb koncertje, 
+				amely mindössze egyetlen másodpercig tartott, amíg Jack megszólaltatott 
+				egyetlen cisz hangot 2007 júliusában a kanadai St. John's városban.[1]
+				A 2012-es labdarúgó-Európa-bajnokság góljai után az együttes 
+				Seven Nation Army című számának dallamát skandálta a közönség.
+			</p>
+			<blockquote>
+				I'm gonna fight 'em off
+				A seven nation army couldn't hold me back
+				They're gonna rip it off
+				Taking their time right behind my back
+			</blockquote>
+			<aside>
+				<figure>
+					<a href="#">
+						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					</a>
+					<figcaption>
+						text text
+					</figcaption>
+				</figure><figure>
+					<a href="#">
+						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					</a>
+					<figcaption>
+						text text
+					</figcaption>
+				</figure><figure>
+					<a href="#">
+						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					</a>
+					<figcaption>
+						text text
+					</figcaption>
+				</figure><figure>
+					<a href="#">
+						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					</a>
+					<figcaption>
+						text text
+					</figcaption>
+				</figure><figure>
+					<a href="#">
+						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					</a>
+					<figcaption>
+						text text
+					</figcaption>
+				</figure><figure>
+					<a href="#">
+						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					</a>
+					<figcaption>
+						text text
+					</figcaption>
+				</figure>
+				<br class="clear" />
+			</aside>
+		</section>
+		<section id="template-3">
+			<h1> Címe a blokknak HARMADIK </h1>
 			<p> 
 				The White Stripes amerikai alternatív rock együttes volt.
 				A detroiti zenekar két tagból állt, Jack White (ének, gitár és egyéb hangszerek), 
@@ -146,10 +211,18 @@
 	</main>
 	<header id="timeLine">
 		<div class="tl-vertical-line"></div>
-		<div class="tl-text">
+		<a class="tl-text" href="#template-1" style="top:10vh" data-color="255,0,0">
 			<div class="tl-time little">6:00</div>
 			<div class="tl-title little">Az első kávé</div>
-		</div>
+		</a>
+		<a class="tl-text" href="#template-2" style="top:20vh" data-color="0,255,0">
+			<div class="tl-time little">12:00</div>
+			<div class="tl-title little">A második</div>
+		</a>
+		<a class="tl-text" href="#template-3" style="top:30vh" data-color="0,0,255">
+			<div class="tl-time little">20:00</div>
+			<div class="tl-title little">A harmadik</div>
+		</a>
 	</header>
 	<script src="js/timeLine.js"></script>
 </body>
