Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   css/style.css
	new file:   img/alt.jpg
	new file:   img/coffee.jpg
	new file:   img/crowd.jpg
	new file:   img/eptic.jpg
	new file:   img/freeUr.jpg
	new file:   img/greatVa.jpg
	new file:   img/microp.jpg
	new file:   img/modernman.jpg
	new file:   img/subm.jpg
	new file:   img/techno.jpg
	modified:   index.html
	modified:   js/timeLine.js
	new file:   sources.html

--- a/index.html
+++ b/index.html
@@ -13,196 +13,128 @@
 </head>
 <body>
 	<main>
-		<section id="template-1">
-			<h1> Címe a blokknak </h1>
-			<p> 
-				The White Stripes amerikai alternatív rock együttes volt.
-				A detroiti zenekar két tagból állt, Jack White (ének, gitár és egyéb hangszerek), 
-				Meg White (dob, és egyéb ütős hangszerek).
-				Az ő nevükhöz fűződik a világ legrövidebb koncertje, 
-				amely mindössze egyetlen másodpercig tartott, amíg Jack megszólaltatott 
-				egyetlen cisz hangot 2007 júliusában a kanadai St. John's városban.[1]
-				A 2012-es labdarúgó-Európa-bajnokság góljai után az együttes 
-				Seven Nation Army című számának dallamát skandálta a közönség.
+		<section id="block-1prequel">
+			<h1> Az oldal célja</h1>
+			<p>
+				Életem jelentős részét fülessel a fülemben, hangzóróval a hátam mögött töltöm,
+				és tudom hogy sokan hasonlóképp élik az életüket, a zene mindenhova elkísér, a 
+				reggeli tömegközlekedés során, munka és tanulás közben, vagy csak ha kikapcsolódásrra vágyom.
+			</p>
+			<div class="content-img" style="background-image:url(img/microp.jpg)">&nbsp;</div>
+			<p>
+				Nagy szívfájdalmam aznonban hogy az emberek nagyrésze csak bekapcsolja a rádiót,
+				rákeres egy toplistára hogy mi az aktuális trend, és nem fordít arra időt hogy igazán minőségi
+				és valóban jó zenével töltse ki a csendet ami körülveszi. Meglehetősen zavar ennek a következménye is,
+				a kreativitást és mindenféle komolyabb erőfeszítést mellőző produkciók így gond nélkül átmennek a minőségvizsgálaton
+				, és megéri tucatszámra gyártani őket.
+			</p>
+			<p>
+				Nem állítom hogy mindenkinek órákat kellene töltenie azzal hogy keresi az ízlése határait, de ha már
+				nem minden hatodik, hanem minden ötödik ember odafigyel a zenefogyasztási szokásaira, már előrébb kerülhetnek
+				az arra igazán méltó előadók, és talán több egyedi produkciónak éri meg a befekteteett energia.
+			</p>
+			<p>
+				A következőkben felsorolt zenék linkjei egyenesen a spotifyra visznek, de persze a többségük megtalálható
+				a legtöbb streaming szolgáltató zenei kínálatában.
+			</p>
+			<p>
+				A zenéket mindenféle műfajból vállogattam össze, így az elektronikus zene a leg szélsőségesebb előadókig,
+				a könnyebb, mindenki álltal fogyasztható, és a régi naaagy mindenki kedvencei közül válogattam a saját preferenciáim szerint.
+			</p>
+			
+		</section>
+		<section id="block-600">
+			<h1>Első kávé</h1>
+			<div class="content-img" style="background-image:url(img/coffee.jpg)">&nbsp;</div>
+			<p>
+				Az ébredés és a fogmosás közt ülün a konyhaasztal előtt üveges tekintettel és próbáljulk
+				minden erőnket összeszedni a naphoz egy kávé társaságában.
+			</p>
+			<p>
+				Nem minden reggel egyforma természetesen, a kávé mellé sokféle zene illik,
+				a legálltalánosabb persze ami a nyugalmunkat és a kiegyensúlyozottságot fokozza.
+				Erre a kedvenc dalom a Great Vacation(Dirt Poor Robins). Fokozatosan indul be, nincs benne
+				semmi ami megzavarná a reggeli nyugalmat, és idillt.
+			</p>
+			<p>
+				Másik kedvencem Modern man intermission, ami George Carlin egyik 
+				<a href="https://www.youtube.com/watch?time_continue=68&v=Lk_dRzaBoUM&feature=emb_title">előadásából</a>
+				készült dal. Sokkal inkább hip hop, az egész dal egy vers és semmi fölösleges zaj nincs benne.
 			</p>
 			<blockquote>
-				I'm gonna fight 'em off
-				A seven nation army couldn't hold me back
-				They're gonna rip it off
-				Taking their time right behind my back
+				I wear power ties, I tell power lies,
+				<br>I take power naps, I run victory laps.
+				<br>I read junk mail, I eat junk food,
+				<br>I buy junk bonds, I watch trash sports.
 			</blockquote>
+			<div class="content-img" style="background-image:url(img/alt.jpg)">&nbsp;</div>
+			<p>
+				Alex turnert mindenki az Arctic Monkeys AM albuma miatt ismeri, pedig sokkal érdekesebb dolgokat is alkotott,
+				ilyen a Submerine nevű albuma.
+			</p>
 			<aside>
 				<figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					<a href="https://open.spotify.com/track/4wR2cuDiIkxj5w3yAflqGG?si=caYeaEMDSh-aup1LLLwZMQ">
+						<div class="album-cover" style="background-image:url('img/greatVa.jpg')"></div>
 					</a>
 					<figcaption>
-						text text
+						Great Vacation
 					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/track/7geQWYSQfDNILUUbpRPMCD?si=oXqrJW6tR4KC2_DeuunhHQ">
+						<div class="album-cover" style="background-image:url('img/modernman.jpg')"></div>
 					</a>
 					<figcaption>
-						text text
+						Modern man intermission
 					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/album/3OqRGywivnQ0IeClUeUa4n?si=sBGc88H-SpSEypRNgWzebw">
+						<div class="album-cover" style="background-image:url('img/subm.jpg')"></div>
 					</a>
 					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
+						Alex Turner - Submarine
 					</figcaption>
 				</figure>
 				<br class="clear" />
 			</aside>
 		</section>
-		<section id="template-2">
-			<h1> Címe a blokknak MÁSODIK </h1>
-			<p> 
-				The White Stripes amerikai alternatív rock együttes volt.
-				A detroiti zenekar két tagból állt, Jack White (ének, gitár és egyéb hangszerek), 
-				Meg White (dob, és egyéb ütős hangszerek).
-				Az ő nevükhöz fűződik a világ legrövidebb koncertje, 
-				amely mindössze egyetlen másodpercig tartott, amíg Jack megszólaltatott 
-				egyetlen cisz hangot 2007 júliusában a kanadai St. John's városban.[1]
-				A 2012-es labdarúgó-Európa-bajnokság góljai után az együttes 
-				Seven Nation Army című számának dallamát skandálta a közönség.
+		<section id="block-730">
+			<h1>Tömeg[es]közlekedés</h1>
+			<div class="content-img" style="background-image:url(img/crowd.jpg)">&nbsp;</div>
+			<p>
+				Chris Lake pont nem az az előadó akinek olyan nagyon promócióra lenne szüksége
+				&nbsp;de mégis ilyenkor kerülnek elő a hozzá hasonló előadók. Az elektronikus/minimál segít nekem
+				a legtöbbet a túlélésben reggel a buszon. Az Owsla music nevű kiadó(Skrillex) zenéi, Eptic(dubstep),
+				valamint a techno.
 			</p>
-			<blockquote>
-				I'm gonna fight 'em off
-				A seven nation army couldn't hold me back
-				They're gonna rip it off
-				Taking their time right behind my back
-			</blockquote>
+			<p>
+				A rock lehet a másik ami segít átvészelni a tömeget. 
+			</p>
 			<aside>
 				<figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					<a href="https://open.spotify.com/track/5TQxS54o7gw5KOxikHxnUi?si=qMdD794FSkyuyEzthwuCNg">
+						<div class="album-cover" style="background-image:url('img/freeUr.jpg')"></div>
 					</a>
 					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
+						Chris Lake
 					</figcaption>
 				</figure>
-				<br class="clear" />
-			</aside>
-		</section>
-		<section id="template-3">
-			<h1> Címe a blokknak HARMADIK </h1>
-			<p> 
-				The White Stripes amerikai alternatív rock együttes volt.
-				A detroiti zenekar két tagból állt, Jack White (ének, gitár és egyéb hangszerek), 
-				Meg White (dob, és egyéb ütős hangszerek).
-				Az ő nevükhöz fűződik a világ legrövidebb koncertje, 
-				amely mindössze egyetlen másodpercig tartott, amíg Jack megszólaltatott 
-				egyetlen cisz hangot 2007 júliusában a kanadai St. John's városban.[1]
-				A 2012-es labdarúgó-Európa-bajnokság góljai után az együttes 
-				Seven Nation Army című számának dallamát skandálta a közönség.
-			</p>
-			<blockquote>
-				I'm gonna fight 'em off
-				A seven nation army couldn't hold me back
-				They're gonna rip it off
-				Taking their time right behind my back
-			</blockquote>
-			<aside>
 				<figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+					<a href="https://open.spotify.com/album/0XSd5zsTTSOjnyyQpSGL0l?si=rtextf3-T2qysNAXOroYSA">
+						<div class="album-cover" style="background-image:url('img/eptic.jpg')"></div>
 					</a>
 					<figcaption>
-						text text
+						Eptic
 					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/playlist/6NLrH4NhRVG6giThtvvxQI?si=Ob6j6vD0SWamJpuM_GJmJw">
+						<div class="album-cover" style="background-image:url('img/techno.jpg')"></div>
 					</a>
 					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
-					</figcaption>
-				</figure><figure>
-					<a href="#">
-						<div class="album-cover" style="background-image:url('img/sadkid-blue.jpg')"></div>
-					</a>
-					<figcaption>
-						text text
+						Minimal/techno
 					</figcaption>
 				</figure>
 				<br class="clear" />
@@ -211,17 +143,17 @@
 	</main>
 	<header id="timeLine">
 		<div class="tl-vertical-line"></div>
-		<a class="tl-text" href="#template-1" style="top:10vh" data-color="255,0,0">
+		<a class="tl-text" href="#block-1prequel" style="top:10vh" data-color="38,0,0">
+			<div class="tl-time little">Előszó</div>
+			<div class="tl-title little">Az oldal célja</div>
+		</a>
+		<a class="tl-text" href="#block-600" style="top:20vh" data-color="124,72,0">
 			<div class="tl-time little">6:00</div>
-			<div class="tl-title little">Az első kávé</div>
+			<div class="tl-title little">Első kávé</div>
 		</a>
-		<a class="tl-text" href="#template-2" style="top:20vh" data-color="0,255,0">
-			<div class="tl-time little">12:00</div>
-			<div class="tl-title little">A második</div>
-		</a>
-		<a class="tl-text" href="#template-3" style="top:30vh" data-color="0,0,255">
-			<div class="tl-time little">20:00</div>
-			<div class="tl-title little">A harmadik</div>
+		<a class="tl-text" href="#block-730" style="top:30vh" data-color="0,0,0">
+			<div class="tl-time little">7:30</div>
+			<div class="tl-title little">Tömeg[es]közlekedés</div>
 		</a>
 	</header>
 	<script src="js/timeLine.js"></script>
