Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   css/style.css
	new file:   img/consol.jpg
	new file:   img/whiteelephant.jpg
	modified:   index.html
	modified:   js/timeLine.js

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<p>
 				Másik kedvencem Modern man intermission, ami George Carlin egyik 
 				<a href="https://www.youtube.com/watch?time_continue=68&v=Lk_dRzaBoUM&feature=emb_title">előadásából</a>
-				készült dal. Sokkal inkább hip hop, az egész dal egy vers és semmi fölösleges zaj nincs benne.
+				készült dal. Sokkal inkább hip hop, az egész dal egy vers és semmi fölösleges zaj nincs benne:
 			</p>
 			<blockquote>
 				I wear power ties, I tell power lies,
@@ -104,13 +104,7 @@
 			<h1>Tömeg[es]közlekedés</h1>
 			<div class="content-img" style="background-image:url(img/crowd.jpg)">&nbsp;</div>
 			<p>
-				Chris Lake pont nem az az előadó akinek olyan nagyon promócióra lenne szüksége
-				&nbsp;de mégis ilyenkor kerülnek elő a hozzá hasonló előadók. Az elektronikus/minimál segít nekem
-				a legtöbbet a túlélésben reggel a buszon. Az Owsla music nevű kiadó(Skrillex) zenéi, Eptic(dubstep),
-				valamint a techno.
-			</p>
-			<p>
-				A rock lehet a másik ami segít átvészelni a tömeget. 
+				Chris Lake pont 
 			</p>
 			<aside>
 				<figure>
@@ -137,23 +131,87 @@
 						Minimal/techno
 					</figcaption>
 				</figure>
+				<figure>
+					<a href="https://open.spotify.com/track/47wPvRG8FEwbZP22UBgTQr?si=ESycpQ6sSgqk03kXd4lAzw">
+						<div class="album-cover" style="background-image:url('img/whiteelephant.jpg')"></div>
+					</a>
+					<figcaption>
+						Seven nation army
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/track/4GTCwHf5tLna3yW6HJ1DvW?si=W1PsZgyJREyVza002gQIeQ">
+						<div class="album-cover" style="background-image:url('img/consol.jpg')"></div>
+					</a>
+					<figcaption>
+						Salute your solution
+					</figcaption>
+				</figure>
 				<br class="clear" />
 			</aside>
+		</section>
+		<section id="block-1030">
+			<h1>Mindennek is</h1>
+			<p>Mindennek is a közepén...</p>
+		</section>
+		<section id="block-1230">
+			<h1>A második kávé</h1>
+			<p></p>
+		</section>
+		<section id="block-1500">
+			<h1>Hazafelé az út veszélyes</h1>
+			<p></p>
+		</section>
+		<section id="block-1800">
+			<h1>WORKOUT!</h1>
+			<p></p>
+		</section>
+		<section id="block-2000">
+			<h1>"Nem iszunk meg valamit?"</h1>
+			<p></p>
+		</section>
+		<section id="block-end">
+			<h1>Végszó</h1>
+			<p></p>
 		</section>
 	</main>
 	<header id="timeLine">
 		<div class="tl-vertical-line"></div>
-		<a class="tl-text" href="#block-1prequel" style="top:10vh" data-color="38,0,0">
+		<a class="tl-text" href="#block-1prequel" style="top:10vh" data-color="255,255,255">
 			<div class="tl-time little">Előszó</div>
 			<div class="tl-title little">Az oldal célja</div>
 		</a>
-		<a class="tl-text" href="#block-600" style="top:20vh" data-color="124,72,0">
+		<a class="tl-text" href="#block-600" style="top:20vh" data-color="255, 111, 0">
 			<div class="tl-time little">6:00</div>
 			<div class="tl-title little">Első kávé</div>
 		</a>
-		<a class="tl-text" href="#block-730" style="top:30vh" data-color="0,0,0">
+		<a class="tl-text" href="#block-730" style="top:30vh" data-color="0, 255, 8">
 			<div class="tl-time little">7:30</div>
 			<div class="tl-title little">Tömeg[es]közlekedés</div>
+		</a>
+		<a class="tl-text" href="#block-1030" style="top:40vh" data-color="43, 0, 255">
+			<div class="tl-time little">10:00</div>
+			<div class="tl-title little">Mindennek is</div>
+		</a>
+		<a class="tl-text" href="#block-1230" style="top:50vh" data-color="255, 8, 0">
+			<div class="tl-time little">12:30</div>
+			<div class="tl-title little">A második kávé</div>
+		</a>
+		<a class="tl-text" href="#block-1500" style="top:60vh" data-color="143, 33, 139">
+			<div class="tl-time little">15:00</div>
+			<div class="tl-title little">Hazafelé az út veszélyes</div>
+		</a>
+		<a class="tl-text" href="#block-1800" style="top:70vh" data-color="164, 171, 164">
+			<div class="tl-time little">18:00</div>
+			<div class="tl-title little">WORKOUT!</div>
+		</a>
+		<a class="tl-text" href="#block-2000" style="top:80vh" data-color="0,0,0">
+			<div class="tl-time little">20:00</div>
+			<div class="tl-title little">"Nem iszunk meg valamit?"</div>
+		</a>
+		<a class="tl-text" href="#block-end" style="top:90vh" data-color="0,0,0">
+			<div class="tl-time little">Végszó</div>
+			<div class="tl-title little"></div>
 		</a>
 	</header>
 	<script src="js/timeLine.js"></script>
