Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	new file:   img/caravan.jpg
	new file:   img/cas.jpg
	new file:   img/dvet.jpg
	new file:   img/emilr.jpg
	new file:   img/gramma.jpg
	new file:   img/ido.jpg
	new file:   img/talk.jpg
	new file:   img/tame.jpg
	new file:   img/toh.jpg
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,30 +47,21 @@
 			<h1>Első kávé</h1>
 			<div class="content-img" style="background-image:url(img/coffee.jpg)">&nbsp;</div>
 			<p>
-				Az ébredés és a fogmosás közt ülün a konyhaasztal előtt üveges tekintettel és próbáljulk
-				minden erőnket összeszedni a naphoz egy kávé társaságában.
+				Én alapvetően az a fajta ember vagyok aki vagy azonnal felkel, vagy 2 óra mulva 
+				riadok fel hogy lekéstem az első 2 órámat.
 			</p>
 			<p>
-				Nem minden reggel egyforma természetesen, a kávé mellé sokféle zene illik,
-				a legálltalánosabb persze ami a nyugalmunkat és a kiegyensúlyozottságot fokozza.
-				Erre a kedvenc dalom a Great Vacation(Dirt Poor Robins). Fokozatosan indul be, nincs benne
-				semmi ami megzavarná a reggeli nyugalmat, és idillt.
+
+				Pont ezért nagyon fontos hogy a reggeli rutint bezsíozzam egy kis zenével, 
+				valamivel ami segít kiegyensúlyozottan kezdeni a napomat. 
 			</p>
 			<p>
-				Másik kedvencem Modern man intermission, ami George Carlin egyik 
-				<a href="https://www.youtube.com/watch?time_continue=68&v=Lk_dRzaBoUM&feature=emb_title">előadásából</a>
-				készült dal. Sokkal inkább hip hop, az egész dal egy vers és semmi fölösleges zaj nincs benne:
-			</p>
-			<blockquote>
-				I wear power ties, I tell power lies,
-				<br>I take power naps, I run victory laps.
-				<br>I read junk mail, I eat junk food,
-				<br>I buy junk bonds, I watch trash sports.
-			</blockquote>
-			<div class="content-img" style="background-image:url(img/alt.jpg)">&nbsp;</div>
-			<p>
-				Alex turnert mindenki az Arctic Monkeys AM albuma miatt ismeri, pedig sokkal érdekesebb dolgokat is alkotott,
-				ilyen a Submerine nevű albuma.
+
+				A kedvenc számom amit nem tudok meghallgatni elégszer a Great Vacation, 
+				ami mindig semlegesíti bennem a stresszt ami elönti az agyam mikor belegondolok a 
+				napom elkövetkezendő történéseibe. Amikor a nep se jött még fel, az ember nem igazán 
+				áll készen belül, de már a bejárati ajtó fele megy felöltöze, cipőben, táskával, akkor 
+				egy ilyen dal ki tud segíteni, és lehelletnyi erőt ad.
 			</p>
 			<aside>
 				<figure>
@@ -97,6 +88,22 @@
 						Alex Turner - Submarine
 					</figcaption>
 				</figure>
+				<figure>
+					<a href="https://open.spotify.com/artist/1QAJqy2dA3ihHBFIHRphZj?si=2-iYHYkDQKqFPqYgrYufTg">
+						<div class="album-cover" style="background-image:url('img/cas.jpg')"></div>
+					</a>
+					<figcaption>
+						Cigarette after sex
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/artist/3ASyBGOeYD6Sk0Vccg8sBW?si=-37N7Vf8SjmqVGIrvQcbhA">
+						<div class="album-cover" style="background-image:url('img/toh.jpg')"></div>
+					</a>
+					<figcaption>
+						Toh Kay
+					</figcaption>
+				</figure>
 				<br class="clear" />
 			</aside>
 		</section>
@@ -104,9 +111,24 @@
 			<h1>Tömeg[es]közlekedés</h1>
 			<div class="content-img" style="background-image:url(img/crowd.jpg)">&nbsp;</div>
 			<p>
-				Chris Lake pont 
+				Gyűlölöm a tömeget, mikor felszállok a majd üres villamosra, és két megáló alatt
+				minden szabad teret kitölt körülöttem a sok ember. Ilyenkor a legjobb a dubstep/minimal.
+				Az emberek rosszalló nézéssel szokták büntetni ha a massza kellős közepén üvölt a fülembe 
+				Eptic valami elmebeteg száma, mégis ez ad tartást a meglehetősen ingergazdag környezetben.
+			</p>
+			<p>
+				Alternatívaként szóbajöhet még a punk(Double Veterans), vagy ha nem uralkodó érzés a tömegundor,
+				akkor Emil.Rulez! .
 			</p>
 			<aside>
+				<figure>
+					<a href="https://open.spotify.com/artist/2B5fUHo1UvvqbH3nzIUulH?si=RAbzI6AQR-KG3vaNr7mqPA">
+						<div class="album-cover" style="background-image:url('img/dvet.jpg')"></div>
+					</a>
+					<figcaption>
+						Double Veterans
+					</figcaption>
+				</figure>
 				<figure>
 					<a href="https://open.spotify.com/track/5TQxS54o7gw5KOxikHxnUi?si=qMdD794FSkyuyEzthwuCNg">
 						<div class="album-cover" style="background-image:url('img/freeUr.jpg')"></div>
@@ -124,19 +146,19 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<a href="https://open.spotify.com/playlist/6NLrH4NhRVG6giThtvvxQI?si=Ob6j6vD0SWamJpuM_GJmJw">
-						<div class="album-cover" style="background-image:url('img/techno.jpg')"></div>
-					</a>
-					<figcaption>
-						Minimal/techno
-					</figcaption>
-				</figure>
-				<figure>
 					<a href="https://open.spotify.com/track/47wPvRG8FEwbZP22UBgTQr?si=ESycpQ6sSgqk03kXd4lAzw">
 						<div class="album-cover" style="background-image:url('img/whiteelephant.jpg')"></div>
 					</a>
 					<figcaption>
 						Seven nation army
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/artist/2H4MuprgPbOgNGhaHT03pD?si=T2Yks-0VS4WRO2CLTLkBpw">
+						<div class="album-cover" style="background-image:url('img/emilr.jpg')"></div>
+					</a>
+					<figcaption>
+						Emil.Rulez!
 					</figcaption>
 				</figure>
 				<figure>
@@ -152,11 +174,68 @@
 		</section>
 		<section id="block-1030">
 			<h1>Mindennek is</h1>
-			<p>Mindennek is a közepén...</p>
+			<p>
+				
+			</p>
+			<aside>
+				<figure>
+					<a href="https://open.spotify.com/playlist/6NLrH4NhRVG6giThtvvxQI?si=Ob6j6vD0SWamJpuM_GJmJw">
+						<div class="album-cover" style="background-image:url('img/techno.jpg')"></div>
+					</a>
+					<figcaption>
+						Minimal/techno
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/album/79dL7FLiJFOO0EoehUHQBv?si=ZiQOzdZfQ1iobfPkvGEMlA">
+						<div class="album-cover" style="background-image:url('img/tame.jpg')"></div>
+					</a>
+					<figcaption>
+						Currents
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/album/0AQU2cTRwdbTHkkJLmZZpG?si=WjeDIe_rTxKFPPfWO7VJ4w">
+						<div class="album-cover" style="background-image:url('img/caravan.jpg')"></div>
+					</a>
+					<figcaption>
+						Caravan Palace
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/track/53qU2K55RJgfs9F50irpB3?si=DdT2nsg-TPu_g3YjjXwyJA">
+						<div class="album-cover" style="background-image:url('img/gramma.jpg')"></div>
+					</a>
+					<figcaption>
+						Muy Tranquilo
+					</figcaption>
+				</figure>
+				<figure>
+					<a href="https://open.spotify.com/track/3PvhJcV5xv7E1ImIfbRYeM?si=3MQ-T1XCSrunPkiTwAFXUQ">
+						<div class="album-cover" style="background-image:url('img/ido.jpg')"></div>
+					</a>
+					<figcaption>
+						I Do Coke
+					</figcaption>
+				</figure>
+				<br class="clear" />
+			</aside>
 		</section>
 		<section id="block-1230">
 			<h1>A második kávé</h1>
 			<p></p>
+			<aside>
+				<figure>
+					<a href="https://open.spotify.com/track/37VL3ff8fU4EI9zq7sOcbd?si=ApQ7tfSnTbeAhiCRKLM-Eg">
+						<div class="album-cover" style="background-image:url('img/talk.jpg')"></div>
+					</a>
+					<figcaption>
+						Takling to the most high
+					</figcaption>
+				</figure>
+				
+				<br class="clear" />
+			</aside>
 		</section>
 		<section id="block-1500">
 			<h1>Hazafelé az út veszélyes</h1>
