Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   css/style.css
	modified:   timeLine.html

--- a/timeLine.html
+++ b/timeLine.html
@@ -14,6 +14,9 @@
 </head>
 <body>
 	<main>
+		<div id="wallpaper">
+			&nbsp; 
+		</div>
 		<header>
 			<a href="/index.html">
 				<h1 id="header-title">
@@ -497,6 +500,7 @@
 				<br class="clear"/>
 			</aside>
 		</section>
+		
 	</main>
 	<header id="timeLine">
 		<div class="tl-vertical-line"></div>
