--- a/sources.html
+++ b/sources.html
@@ -1,3 +1,6 @@
-Image by <a href="https://pixabay.com/photos/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1209816">Free-Photos</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1209816">Pixabay</a>
-Vinly
-http://www.heropatterns.com
+<h1>Források:</h1>
+<ul>
+	<li><a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1209816">Pixabay</a></li>
+	<li><a href="https://en.wikipedia.org/wiki/Vinyl_(TV_series)"> </a>Vinly(sorozat)</li>
+	<li><a href="http://www.heropatterns.com"> Hero patterns </a></li>
+</ul>
