--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 			&nbsp; 
 		</div>
 		<header>
-			<a href="/">
-				<h1 id="header-title">
-					Música para lagartos
-				</h1>
-			</a>
+			<h1 id="header-title">
+				Música para lagartos
+			</h1>
 		</header>
 		<section id="block-1prequel">
 			<h1> Az oldal célja</h1>
@@ -391,6 +389,7 @@
 				</figure>
 				<br class="clear" />
 			</aside>
+		</section>
 		<section id="block-1800">
 			
 			<div class="content-img" style="background-image:url(img/gym.jpg)">
@@ -587,7 +586,7 @@
 				<div class="tl-title little">"Nem iszunk meg valamit?"</div>
 			</a>
 			<div class="tl-open" >
-				<a href="/nem_iszunk_meg_valamit.html">
+				<a href="/nem-iszunk-meg-valamit.html">
 					<img src="img/open.png">
 				</a>
 			</div>
